content/homepage.css
/* CUSTOMIZE THE CAROUSEL
  -------------------------------------------------- */

/* Since positioning the image, we need to help out the caption */
.carousel-caption {
  left: 0;
  right: 0;
  padding: 0.5rem 1rem 0 1rem;
  text-align: left;
  /*
    HACK: Specifying a z-index of 10 *should* allow the link ("button") in the
    carousel caption to be clicked -- since the "carousel-control-next" has a
    z-index of 1). However, it is not currently working, so set "bottom" on the
    carousel controls as a workaround.
  */
  /* z-index: 10; */
}

/*
  For small devices, align carousel controls with bottom of caption
*/
.carousel-control-next,
.carousel-control-prev {
  bottom: 0;
}

.carousel-caption {
  background-color: #4f4f4f;
  bottom: -200px;
  height: 200px;
}

.carousel-caption p {
  margin-right: 7rem;
}

.carousel-item {
  margin-bottom: 200px;
}

.carousel-control-prev,
.carousel-control-next {
  top: 85%;
}

@media (min-width: 992px) {
  /*
    For wide devices, overlay the caption on the image (using a partially
    transparent color)
  */
  .carousel-caption {
    background-color: #1e4173cc;
    bottom: 0;
    height: auto;
  }

  .carousel-caption p {
    margin-right: 9rem;
  }

  .carousel-control-prev,
  .carousel-control-next {
    /*
      HACK: Set "bottom" on carousel controls as a workaround for z-index issue
      with links in caption.
    */
    bottom: 25%;
    /* For wide devices, extend carousel controls to top of image */
    top: 0;
  }

  .carousel-control-prev-icon,
  .carousel-control-next-icon {
    /*
      For wide devices, set background color on carousel control icons to avoid
      issue where controls are difficult to see (depending on darkness of
      carousel image)
    */
    background-color: #959595;
    background-size: 75%;
    border-radius: 2rem;
    height: 3rem;
    width: 3rem;
  }

  .carousel-item {
    margin-bottom: 0;
  }
}

.carousel-indicators {
  margin-bottom: 0;
}

/* MARKETING CONTENT
  -------------------------------------------------- */

.marketing h2 {
  font-weight: 400;
}

/* Featurettes
  ------------------------- */

/* Thin out the marketing headings */
.featurette-heading {
  font-weight: 300;
  line-height: 1.1;
  letter-spacing: -0.05rem;
}

/* RESPONSIVE CSS
  -------------------------------------------------- */

@media (min-width: 40em) {
  /* Bump up size of carousel content */
  .carousel-caption p {
    margin-bottom: 1.25rem;
    line-height: 1.4;
  }

  .featurette-heading {
    font-size: 2.5rem;
  }
}

